--- a/contact.html
+++ b/contact.html
@@ -75,8 +75,8 @@
                                 <p style="margin-top: 10px;">Ou</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="https://wa.me/+5512992248687"><i class="bi bi-whatsapp"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
-                                    <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                    <a class="text-gradient" href="https://www.linkedin.com/in/gabriel-loha-026925215"><i class="bi bi-linkedin"></i></a>
+                                    <a class="text-gradient" href="https://github.com/GabrielLoha-Dev"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
