Email em manutanção

--- a/contact.html
+++ b/contact.html
@@ -63,10 +63,10 @@
                                     </div>
                                     <div class="d-none" id="submitSuccessMessage">
                                         <div class="text-center mb-3">
-                                            <div class="fw-bolder">Envio do formulário bem-sucedido!</div>
-                                            Para ativar este formulário, inscreva-se em
+                                            <div class="fw-bolder">OPS! Aconteceu algo.</div>
+                                            Esse sistema esta em manutenção.
                                             <br />
-                                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                            <p>Arrate para baixo para os links diretos.</p>
                                         </div>
                                     </div>
                                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Erro ao enviar a mensagem!</div></div>
