--- a/projects.html
+++ b/projects.html
@@ -48,10 +48,8 @@
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
-                                        <h2 class="fw-bolder">Nome do Projeto 2</h2>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum
-                                            illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero,
-                                            iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                        <h2 class="fw-bolder">CoinBlend</h2>
+                                        <p>O <a src="https://gabrielloha-dev.github.io/coinblend/">CoinBlend</a> é a solução ideal para descomplicar suas transações financeiras globais. Este conversor de moedas inteligente oferece uma experiência intuitiva e eficiente, permitindo que usuários convertam valores entre diferentes moedas com facilidade e precisão.<br><a src="https://gabrielloha-dev.github.io/coinblend/">Acessar CoinBlend</a></p>
                                     </div>
                                     <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d"
                                         alt="..." />
