--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
-                                        <h2 class="fw-bolder"><a src="https://gabrielloha-dev.github.io/coinblend/">CoinBlend</a></h2>
-                                        <p>O <a src="https://gabrielloha-dev.github.io/coinblend/">CoinBlend</a> é a solução ideal para descomplicar suas transações financeiras globais. Este conversor de moedas inteligente oferece uma experiência intuitiva e eficiente, permitindo que usuários convertam valores entre diferentes moedas com facilidade e precisão.<br><a src="https://gabrielloha-dev.github.io/coinblend/">Acessar CoinBlend</a></p>
+                                        <h2 class="fw-bolder"><a href="https://gabrielloha-dev.github.io/coinblend/">CoinBlend</a></h2>
+                                        <p>O <a href="https://gabrielloha-dev.github.io/coinblend/">CoinBlend</a> é a solução ideal para descomplicar suas transações financeiras globais. Este conversor de moedas inteligente oferece uma experiência intuitiva e eficiente, permitindo que usuários convertam valores entre diferentes moedas com facilidade e precisão.<br><a href="https://gabrielloha-dev.github.io/coinblend/">Acessar CoinBlend</a></p>
                                     </div>
                                 </div>
                             </div>
