--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,10 @@
                                         <h2 class="fw-bolder"><a href="https://gabrielloha-dev.github.io/coinblend/">CoinBlend</a></h2>
                                         <p>O <a href="https://gabrielloha-dev.github.io/coinblend/">CoinBlend</a> é a solução ideal para descomplicar suas transações financeiras globais. Este conversor de moedas inteligente oferece uma experiência intuitiva e eficiente, permitindo que usuários convertam valores entre diferentes moedas com facilidade e precisão.<br><a href="https://gabrielloha-dev.github.io/coinblend/">Acessar CoinBlend</a></p>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="card-body p-0">
+                                <div class="d-flex align-items-center">
                                     <div class="p-5">
                                         <h2 class="fw-bolder"><a href="https://gabrielloha-dev.github.io/zaplink/">ZapLink</a></h2>
                                         <p>O <a href="https://gabrielloha-dev.github.io/zaplink/">ZapLink</a> O projeto visa simplificar e agilizar a comunicação por meio do WhatsApp, oferecendo uma ferramenta intuitiva para a criação de links de conversa diretos. Com o Gerador de Links de Conversa, os usuários podem facilmente configurar links personalizados que, quando clicados, iniciam automaticamente uma conversa no WhatsApp com o destinatário desejado.<br><a href="https://gabrielloha-dev.github.io/zaplink/">Acessar ZapLink</a></p>
